[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/HUD/Scenes/DraggableBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UI/PlayerDebugMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme/darkred_theme.tres" type="Theme" id=3]
[ext_resource path="res://Ships/PackedShips.tscn" type="PackedScene" id=4]

[node name="PlayerDebugMenu" type="Panel"]
self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -384.0
margin_bottom = 405.0
rect_min_size = Vector2( 390, 405 )
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
ship_hangar = ExtResource( 4 )

[node name="TopBar" parent="." instance=ExtResource( 1 )]
margin_right = 384.0
margin_bottom = 30.0
rect_min_size = Vector2( 390, 30 )

[node name="Label" parent="TopBar" index="0"]
text = "DEBUG"

[node name="DebugOptsVBox" type="VBoxContainer" parent="."]
anchor_top = 0.216
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -26.0
rect_min_size = Vector2( 390, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="DebugOptsVBox"]
margin_right = 390.0
margin_bottom = 30.0

[node name="ShipLabel" type="Label" parent="DebugOptsVBox/HBoxContainer"]
margin_top = 2.0
margin_right = 61.0
margin_bottom = 28.0
text = "Piloted:"

[node name="ShipSelect" type="OptionButton" parent="DebugOptsVBox/HBoxContainer"]
margin_left = 67.0
margin_right = 187.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
[connection signal="mouse_entered" from="." to="." method="_on_PlayerDebugMenu_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayerDebugMenu_mouse_exited"]
[connection signal="mouse_entered" from="TopBar" to="." method="_on_TopBar_mouse_entered"]
[connection signal="mouse_exited" from="TopBar" to="." method="_on_TopBar_mouse_exited"]
[connection signal="item_selected" from="DebugOptsVBox/HBoxContainer/ShipSelect" to="." method="_on_ShipSelect_item_selected"]
[connection signal="mouse_entered" from="DebugOptsVBox/HBoxContainer/ShipSelect" to="." method="_on_ShipSelect_mouse_entered"]
[connection signal="mouse_exited" from="DebugOptsVBox/HBoxContainer/ShipSelect" to="." method="_on_ShipSelect_mouse_exited"]

[editable path="TopBar"]
